bootstrap/base/mon/cluster-prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: mon
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
spec:
  selector: 
    app: prometheus-server
  type: NodePort  
  ports:
    - port: 8080
      name: prometheus
      targetPort: 9090 
      nodePort: 30091
    - port: 10901
      name: thanos-sidecar-grpc
      targetPort: 10901
